Tue Mar  9  5:16:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* configure.in: Added tests for syslog
	* Source/include/config.h.in: Added definitions for syslog
	* Source/NSLog.m: Added locking for multi-thread serialisation and
	added syslog support when write to stderr fails.

1999-03-08  Adam Fedor  <fedor@gnu.org>

	* Merged dawn branch to main.

Wed Mar  3  5:32:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSUser.m: Fixed a typo reported by twhite@rogers.wave.ca
	* Source/TcpPort.m: Fixed typos.

Tue Mar  2 15:07:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/TcpPort.m: If the host has no IP address, try finding the
	address of 'localhost' and, if that fails, use 127.0.0.1

Tue Mar  2 11:25:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* NSTimeZones/Makefile.postamble: Updated to preserve old localtime
	* NSTimeZones.tar: Updated to use the latest available zone info.

Tue Mar  2 08:04:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Merge in 'dawn' CVS branch.

Tue Feb 23  12:03:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/include/NSObject.h: Fixed bugin in ASSIGNCOPY() macro and added
	CREATE_AUTORELEASE_POOL() macro for libFoundation compatibility.
	* Source/include/NSRunLoop.h: Added GCFinalization protocol.
	* Source/NSRunLoop.m: Tidied a little, added GC macro use, fixed minor
	bug, and added slight performance improvement.

Mon Feb 22   5:40:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Merged in alterations from main cvs branch made to wrong place 'cos
	dawn branch was already created :-(
	* Source/NSData.m: preserve file attributes when writing atomically
	* Source/NSUser.m: Bugfixes for consistent naming of current user.
	* Source/NSUserDefaults.m: Bugfixes so that running apps as root
	doesn't mess up defaults database.
	* Source/NSFileManager.m: Create files with correct ownership when